<?xml version="1.0"?>
<package format="3">
  <name>gpu-voxels</name>
  <version>9.3.99</version>
  <description>GPU-Voxels</description>
  <maintainer email="tbd@tbd.tbd">tbd</maintainer>
  <license>Various</license>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>libglm-dev</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
